Eliminate horizontal viewport overflow and clipping bugs on mobile

--- a/css/global.css
+++ b/css/global.css
@@ -24,11 +24,12 @@
   box-sizing: border-box;
 }
 
-body {
+html, body {
   background-color: var(--color-black);
   color: var(--color-white);
   font-family: var(--font-primary);
   overflow-x: hidden;
+  max-width: 100vw;
   -webkit-font-smoothing: antialiased;
 }
 
